Opened 16 years ago

Closed 15 years ago

#1599 closed bug (fixed)

Haiku Booting on a MacBook Info...(gets stuck)

Reported by: kvdman Owned by: axeld
Priority: normal Milestone: R1
Component: Drivers/Disk Version: R1/pre-alpha1
Keywords: Cc: chrisply@…, marcusoverhagen
Blocked By: Blocking:
Platform: All

Description

Ok, this is a little confusing.

I have a core 2 duo macbook.

Using Vmware Fusion, I've enabled a physical bootcamp partition, and used Zeta to mount the disk, format it, install Haiku, and make it bootable.

Macbooks don't have a PS/2 controller, so I can't select any safe mode settings or type anything.

From ReactOS:

'ReactOS development builds (trunk) have run fine now for two days on Intel Mac (with Bootcamp installed) computers. Intel Mac's consist of standard hardware but there are some differences which had made it impossible to run ReactOS before. Intel Mac's don't have PS/2 keyboard controllers. GRUB as well as Darwin's BIOS loader had similar problems sometime ago, good that it has been fixed in ReactOS too. Intel Mac's BIOS has a "serial port" bug, it reports that COM1 exist, but no one is there physically. Two other BIOS bug are related to reading CD/DVD drives. ReactOS does support HID-compliant devices, especially USB keyboard and mouse which is relevant for Intel Mac. We want to thank Michael Steil for making this possible. Stay tuned for ReactOS 0.3.1 which will incorporate these improvements and will be released in late december 2006.'

Anyways...

I was wondering if Haiku writes a log by default, that way I could mount the physical disk Haiku is installed on and read it under Zeta...

What I have done, is booted the physical drive that Haiku is installed on through Vmware Fusion in Mac OS X. I added a serial port, and got the log. Vmware crashes though (see screenshot), and here's the log: http://rafb.net/p/jFLYHU40.html

When I boot the physical partition normally (no emulator), the system shows the Haiku boot screen but will stay there forever.

Anyways, hope this info is useful.

Attachments (5)

mb-sc.png (53.2 KB ) - added by kvdman 16 years ago.
log1.rtf (58.1 KB ) - added by kvdman 16 years ago.
log1.2.rtf (58.1 KB ) - added by kvdman 16 years ago.
log2.rtf (50.8 KB ) - added by kvdman 16 years ago.
Z.JPG (279.5 KB ) - added by kvdman 15 years ago.

Download all attachments as: .zip

Change History (29)

by kvdman, 16 years ago

Attachment: mb-sc.png added

comment:1 by kvdman, 16 years ago

Here's the Vmware log of it booting Haiku off the Macbook's physical partition:

http://rafb.net/p/1fkACT55.html

comment:2 by umccullough, 16 years ago

you should attach the text file(s) to the tickets directly - those links will expire shortly.

when it comes to bug reports, a file attachment is always better than a link :)

by kvdman, 16 years ago

Attachment: log1.rtf added

by kvdman, 16 years ago

Attachment: log1.2.rtf added

by kvdman, 16 years ago

Attachment: log2.rtf added

comment:3 by kvdman, 16 years ago

added attachments of the http://rafb.net links as advised by Urias. Sorry didn't know they only lasted 24 hours. Also, my wireless gave up, so there are two 'log1's. They are the same.

comment:4 by chrisjp, 16 years ago

In VMWare I don't know what the problem is.

The non-emulator booting freezes at the haiku logo as the new SATA driver doesn't have the vendor/product ID used in the macbook. Updating the ahci.c file:

{ 0x8086, 0x27c3, "Intel ICH7R (RAID mode)" },

+ { 0x8086, 0x27c4, "Intel ICH7 (AHCI Macbook)" },

{ 0x8086, 0x27c5, "Intel ICH7-M (AHCI mode)" },

will allow haiku to boot, however due to other usb related uhci bugs, haiku will not function properly.

Currently we can use external usb mice/keyboards unreliably, but I'm working on figuring out the usb problem and hopefully will put together a touchpad driver for the macbook :)

chrisply@… for more info if you like.

comment:5 by chrisjp, 16 years ago

Cc: chrisply@… added

comment:6 by chrisjp, 16 years ago

Unrelated to this bug, but I should also add that booting requires you to disable or delete the intel_extreme driver :)

comment:7 by marcusoverhagen, 16 years ago

Cc: marcusoverhagen added

The ICH7 Family Specification Update from September 2007 lists device id 27C4 as "Mobile Non-AHCI and Non-RAID Mode".

Can you confirm that AHCI works properly?

comment:8 by kvdman, 16 years ago

I can't duplicate the Macbook booting Haiku... Could you briefly explain your installation method chrisjp?

thx

comment:9 by chrisjp, 16 years ago

Re: Marcus (Thanks for sata/ahci work)

The hardware in the macbook is the Intel® 82801GBM I/O Controller Hub (ICH7M) - AHCI only http://www.intel.com/support/chipsets/imst/sb/CS-012304.htm

In terms of the product ID, some linux lists said it may vary based upon the mode it is in at bootup, however, this appears to work for me. (Possibly a problem for other motherboards? I can't say)

I can verify that adding it to the ahci.c was one of the additions to allow booting on the macbook.

Re: kvd The method I used for compiling and installing the image is a bit tricky, linux compile with direct partition writing of the image, refit/grub -> haiku partition.

You can boot it straight from Refit, which is pretty ideal.

I can compile the source in mac osx (need a case sensitive partition) and use parallels / vmware, but I haven't looked at using /dev/disks04 or whatnot for writing directly to the partition in darwin.

Currently there is no efi/gpt etc support in haiku so you have to have it in one of the first 4 positions to enable bios emulation. (Just like windows)

My setup is: P1 [EFI] P2 [Leopard] P3 [Haiku] P4 [Linux] The following drivers need to be removed for bootup also: intel_extreme and ehci. The intel driver will crash at mode switch/init, the ehci driver at usb device detection.

The intel_extreme bombs for reasons I've yet to explore, and the ehci for problems with both the uhci and ehci drivers noticing the connection of the isight, and trashing the whole usb bus. (looking into a solution)

Also, once you get the system enabled, you'll need to use an external mouse/keyboard, since we don't yet support composite hid devices (I'm rewriting this).

I also wrote a driver for that cute little remote, but that's not important ;)

This is all a lot to put on trac, so I'll try to put a page on the wiki here or at haikuware about the macbook support since there is interest.

I'd also be totally willing to throw up a dd'able image on my site if you are interested.

Cheers, Chris

comment:10 by chrisjp, 16 years ago

Also in the rare event that you have a bluetooth keyboard and mouse that would work too since the non-firmware upgraded bluetooth interface has support.

I also disabled firewire as a plugin as it initialized a whole slew of memory in the syslog. Not sure if this is a bug or feature ;)

I'm not at home at the moment, but hit me up with other questions if you have them.

comment:11 by kvdman, 16 years ago

Hi,

I tried deleting just the intel_extreme driver before, now tried deleting firewire and ehci drivers. It seemed to get a bit further, where it looked like switching modes and starting the desktop, but stopped with some lines on the screen.

I'm not sure my install method is the right way, as I'm using Vmware and Zeta to write Haiku to the physical partition. My setup is similar to yours, but I'm installing on the 3rd partition and using ReFIT to boot it.

Do you have to have a mouse and keyboard hooked up to boot Haiku (I do have USB both, but just wondered because I'm trying to boot without them)?

That dd'able image you mention would be nice :) along with the command I'll need to write it to the partition. I think I've tried that before using a different OS, and the partition would only be the size of the disk image.

comment:12 by nutela, 16 years ago

Wow, if APCI and sleep states like standby and hibernate work and it won't overheat a Mac book will be mine! Nice work, any idea if Haiku will boot on an intel Mac Mini?

@Marcus; sorry to spam like this but I wanted to ask if you have a spare Hauppauge Win TV card? I can't get the model 928 anymore.

comment:13 by kvdman, 15 years ago

Component: Drivers/DiskDrivers/USB

I changed this to USB, because I believe there's a USB error now affecting all Macs from booting Haiku (tested Haiku with hrev30522) and the new ATA stack).

I hope that Michael Lotz will get a copy, if not could someone CC it to him?

I've tested this on a Mac Pro (Desktop) and MacBook, they both book Haiku to the same error, please see the attached screenshot (Z.jpg).

By the way, I can't use the keyboard at all on both machines, one's a touchpad, the other a USB keyboard (Apple).

by kvdman, 15 years ago

Attachment: Z.JPG added

comment:14 by umccullough, 15 years ago

If there is a new bug, there should be a new ticket. You should use the Blocking/Blocked By to indicate that you cannot re-test the other ticket until the new ticket is fixed.

comment:15 by kvdman, 15 years ago

Thanks for that info Urias.

I just assume the above, but am unsure that's why I'd be uncomfortable with your suggestion. It just seems logical because the keyboards don't work on both machines and there's an EHCI error on both machines which is exactly the same. It is true that I can't debug further because I don't have a working keyboard though, and Intel Mac's don't have PS/2 keyboard controllers - but I'm not a dev. Perhaps someone else can chime in?

comment:16 by marcusoverhagen, 15 years ago

Component: Drivers/USBDrivers/Disk

This Z.jpg is clearly something ehci related. please file a bug report against ehci. Make sure to include a backtrace (type bt and press Enter) in the image next time.

comment:17 by kvdman, 15 years ago

Thanks for that Marcus, I can't type bt, because the keyboards don't work on either machines, either the touchpad or USB keyboard, see the ReactOS comment, I think it may be relavant:

ReactOS development builds (trunk) have run fine now for two days on Intel Mac (with Bootcamp installed) computers. Intel Mac's consist of standard hardware but there are some differences which had made it impossible to run ReactOS before. Intel Mac's don't have PS/2 keyboard controllers. GRUB as well as Darwin's BIOS loader had similar problems sometime ago, good that it has been fixed in ReactOS too. Intel Mac's BIOS has a "serial port" bug, it reports that COM1 exist, but no one is there physically. Two other BIOS bug are related to reading CD/DVD drives. ReactOS does support HID-compliant devices, especially USB keyboard and mouse which is relevant for Intel Mac. We want to thank Michael Steil for making this possible. Stay tuned for ReactOS 0.3.1 which will incorporate these improvements and will be released in late december 2006.'

But, I'll file a new bug in this EHCI bug then, although I can't do much more.

comment:18 by kvdman, 15 years ago

I've opened a new ticket in this regard - #3853

comment:19 by kvdman, 15 years ago

Blocked By: 3847 added

comment:20 by oco, 15 years ago

Blocked By: 3847 removed

(In #3847) I reproduce it on my new laptop with hrev30563. This laptop is a dual-core with 4 Gb of memory. I am not able to reproduce it on my older one with 512 Mb.
I is my own build, compiled under Haiku. I boot from a USB hard drive. I will add some more informations later (syslog and threads).

comment:21 by anevilyak, 15 years ago

Blocked By: 3847 added

(In #3847) Probably an accidental edit on oco's part. Reinstated previous blocker list.

comment:22 by axeld, 15 years ago

Blocked By: 3847 removed

(In #3847) Those bugs have *nothing* to do with this bug, so removing from the blocking ones.

comment:23 by kvdman, 15 years ago

Since ticket #3847 has been fixed, I'm able to boot Haiku on both Macs now. This can be closed.

More info here:

http://www.haikuware.com/preliminary-haiku-support-for-macs

comment:24 by stippi, 15 years ago

Resolution: fixed
Status: newclosed

Thanks for the update! Sweet!

Note: See TracTickets for help on using tickets.