* Added the device/vendor pair of the ICH7 used in the MacBooks, courtesy of   "chrisjp", see bug #1599. * Minor cleanup.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@22836 a95241bf-73f2-0310-859d-f6bbb57e9c96